# https://pypi.org/project/setupcfg-generator/
[metadata]
name = connection
version = 2018.11.19
url = https://github.com/looking-for-a-job/connection.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = connection

[options]
install_requires = 
	Requests
	public
	setuptools
packages = 
	connection
