# https://pypi.org/project/setupcfg-generator/
[metadata]
name = connection
version = 2019.3.22
url = https://github.com/looking-for-a-job/connection.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = connection

[options]
install_requires = 
	Requests
	public
	setuptools
packages = 
	connection
